# c_class

./: .gitignore  2022_a_b.c  README.md
c_intermidate/: helpers.c  test.c
c_intermidate/HM_targil_3/: 1.c  2_a.c  2_b.c
c_intermidate/HM_tragil_2/: 1_a.c  1_b.c  2.c
c_intermidate/class9/: class9.sln  class9.vcxproj  class9.vcxproj.filters  exercise1.c  files.h  myFile.txt
c_intermidate/class_1/: 1.c  2.c  HM_targil1.c  HM_targil2.c  HW_targil2.c
c_intermidate/class_3/: exercise1.c
c_intermidate/class_4/: 1.c
c_intermidate/class_5/: 1.c  2.c
c_intermidate/class_8/: CMakeLists.txt  ch.h  lab.c  main.c  swap.h
c_intermidate/class_8/apps/: CMakeLists.txt  main.c
c_intermidate/class_8/lab/: CMakeLists.txt
c_intermidate/class_8/lab/include/: lab.h
c_intermidate/final_project/: common.h  final_project.sln  final_project.vcxproj  final_project.vcxproj.filters  main.c  q1.c  q1.h  q2.c  q2.h  q3.c  q3.h
c_intermidate/test/: main.c  test.sln  test.vcxproj
class1/: test.c
class10/: hw_targil7.c
class10_recursions/: targil1.c  targil3.c  תרגול 10- רקורסיה.docx
class11/: targil1.c  targil2.c
class12/: Group 11111516 - Ex. 5.xlsx  HW_targil8.c  __תרגול 12- מצביעים ,הקצאות דינאמיות.docx  random.c
class12_pointers_and_dinamic_arrays/: random.c  targil1.c
class13/: targil1.c
class1_basic_io_for_loop/: HW_targil1.c  test.c
class2/: targil1.c  targil3.c  targil4.c
class2_modulu/: targil2_modulu_manipulation.c
class3/: targil2.c
class3_basic_structures/: HW_targil3.c  targil1_structures.c  targil3.c
class4_int_manipulation/: targil1_int_manipulation.c  targil2_int_manipulation.c
class5/: targil1.c  targil2.c  תרגול 5 - פונקציות.docx
class5_structs_and_functions/: HW_targil4.c
class6_arrays/: practice.c  targil1.c
class7/: HW_targil5.c  practice.c  targil3.c
class7_arrays_manipulation/: targil1_data_conversions.c  targil3_array_manipulation.c
class8/: HW_targil6.c  targil1.c  targil2.c
class8_str_and_two_D_arrays/: targil4.c  תרגול 8 - מחרוזות ומערכים דו מימדיים.docx
class9/: homework6.c  momo.c  test.c
class_6/: 2.c
class_7/: 1.c
exams/: 2022_a_a.c
exams/e2017/: 1.c  2.c  3.c
(+46 files in other folders)
